第二次提交

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <!--子模块-->
     <modules>
 
-
+        <module>shopping_goods_service</module>
         <module>shopping_generator_code</module>
         <module>shopping_common</module>
         <module>shopping_manager_api</module>
