--- a/shopping_common/pom.xml
+++ b/shopping_common/pom.xml
@@ -54,6 +54,11 @@
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot3-starter</artifactId>
+            <version>1.38.0</version>
+        </dependency>
     </dependencies>
 
 </project>
