--- a/shopping_admin_service/pom.xml
+++ b/shopping_admin_service/pom.xml
@@ -61,6 +61,11 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot3-starter</artifactId>
+            <version>1.38.0</version>
+        </dependency>
     </dependencies>
 
 </project>
