--- a/shopping_manager_api/src/main/resources/application.yml
+++ b/shopping_manager_api/src/main/resources/application.yml
@@ -1,12 +1,15 @@
+# 端口号
 server:
   port: 8001
 
+
+# 日志格式
 logging:
   pattern:
     console: '%d{HH:mm:ss.SSS} %clr(%-5level) ---  [%-15thread] %cyan(%-50logger{50}):%msg%n'
-  level:
-    org.apache.dubbo: DEBUG
 
+
+# Nacos
 spring:
   application:
     name: shopping_manager_api
@@ -15,13 +18,31 @@ spring:
       discovery:
         server-addr: 192.168.44.135:8848
 
+
 dubbo:
   application:
+    #项目名字
     name: shopping_manager_api
     qos-enable: false
   protocol:
     name: dubbo
     port: -1
   registry:
+    # 注册地址
     address: nacos://192.168.44.135:8848
-
+############## Sa-Token 配置 (文档: https://sa-token.cc) ##############
+sa-token:
+  # token 名称（同时也是 cookie 名称）
+  token-name: satoken
+  # token 有效期（单位：秒） 默认30天，-1 代表永久有效
+  timeout: 2592000
+  # token 最低活跃频率（单位：秒），如果 token 超过此时间没有访问系统就会被冻结，默认-1 代表不限制，永不冻结
+  active-timeout: -1
+  # 是否允许同一账号多地同时登录 （为 true 时允许一起登录, 为 false 时新登录挤掉旧登录）
+  is-concurrent: true
+  # 在多人登录同一账号时，是否共用一个 token （为 true 时所有登录共用一个 token, 为 false 时每次登录新建一个 token）
+  is-share: true
+  # token 风格（默认可取值：uuid、simple-uuid、random-32、random-64、random-128、tik）
+  token-style: uuid
+  # 是否输出操作日志
+  is-log: true
